# projectgame

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/: routes.py
app/: .dockerignore  Dockerfile  main.py
core/: config.py
temp/: deepseek pomysły.txt  message.txt
